Add Last-Modified header for scraped responses (#44)
