# handlers/getAdventurer.go
@@ -23,8 +23,8 @@ func getAdventurer(w http.ResponseWriter, r *http.Request) {
 	}
 
 	if data, status, date, expires, ok := cache.Profiles.GetRecord([]string{region, profileTarget}); ok {
-		w.Header().Set("Date", date)
 		w.Header().Set("Expires", expires)
+		w.Header().Set("Last-Modified", date)
 
 		if status == http.StatusOK {
 			json.NewEncoder(w).Encode(data)
